bugs fixes half