@@ -1,6 +1,5 @@
 package com.crm.demo.controller;
 
-import java.io.InputStream;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
@@ -12,8 +11,6 @@ import java.util.Map;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.CellType;
 import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -22,13 +19,13 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
+import java.util.stream.Collectors;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import com.crm.demo.model.Meeting;
 import com.crm.demo.model.Project;
 import com.crm.demo.model.Report;
-import com.crm.demo.model.ReportAttachment;
 import com.crm.demo.model.Task;
 import com.crm.demo.model.User;
 import com.crm.demo.model.Attendance;
@@ -38,7 +35,6 @@ import com.crm.demo.repository.MeetingRepository;
 import com.crm.demo.repository.ProjectRepository;
 import com.crm.demo.repository.ReportAttachmentRepository;
 import com.crm.demo.repository.ReportRepository;
-import com.crm.demo.model.Team;
 import com.crm.demo.repository.TaskRepository;
 import com.crm.demo.repository.UserRepository;
 import com.crm.demo.repository.HolidayRepository;
@@ -56,6 +52,34 @@ import jakarta.validation.Valid;
 @Controller
 @RequestMapping("/admin")
 public class AdminController {
+
+	private static final String ATTR_LOGGED_IN_USER = "loggedInUser";
+	private static final String ROLE_ADMIN = "ADMIN";
+	private static final String ROLE_SUPER_ADMIN = "SUPER_ADMIN";
+	private static final String ROLE_MANAGER = "MANAGER";
+	private static final String ROLE_EMPLOYEE = "EMPLOYEE";
+	private static final String ROLE_HR = "HR";
+	private static final String STATUS_ACTIVE = "active";
+	private static final String STATUS_PENDING = "pending";
+	private static final String STATUS_REJECTED = "rejected";
+	private static final String TOTAL_EMPLOYEES = "totalEmployees";
+	private static final String STATUS_DONE = "statusDone";
+	private static final String STATUS_PENDING_LOWER = "statusPending";
+	private static final String REDIRECT_ADMIN_EMPLOYEES = "redirect:/admin/employees";
+	private static final String ATTR_ERROR_MESSAGE = "errorMessage";
+	private static final String REDIRECT_ADMIN_ADD_EMPLOYEE = "redirect:/admin/add-employee";
+	private static final String TENANT_DOMAIN_SUFFIX = "@crm.com).";
+	private static final String ATTR_SUCCESS_MESSAGE = "successMessage";
+	private static final String REDIRECT_ADMIN_EDIT_EMPLOYEE = "redirect:/admin/edit-employee/";
+	private static final String ATTR_UPCOMING_MEETINGS = "upcomingMeetings";
+	private static final String ATTR_PAST_MEETINGS = "pastMeetings";
+	private static final String ATTR_TENANT_USERS = "tenantUsers";
+	private static final String ATTR_ACTIVE_PAGE = "activePage";
+	private static final String PAGE_SCHEDULE_MEETING = "schedule-meeting";
+	private static final String TEMPLATE_SCHEDULE_MEETING = "admin-scheduleMeeting";
+	private static final String REDIRECT_ADMIN_SCHEDULE_MEETING = "redirect:/admin/schedule-meeting";
+	private static final String MSG_MEETING_NOT_FOUND = "Meeting not found.";
+	private static final String REDIRECT_ADMIN_SETTINGS = "redirect:/admin/settings";
 
 	@Autowired
 	private AttendanceService attendanceService;
@@ -104,20 +128,56 @@ public class AdminController {
 	// =========================================================
 
 	private void injectUser(HttpServletRequest request, Model model) {
-		String username = (String) request.getAttribute("loggedInUser");
+		String username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		String role     = (String) request.getAttribute("loggedInRole");
 		model.addAttribute("adminName", username != null ? username : "Admin");
-		model.addAttribute("adminRole", role     != null ? role     : "ADMIN");
+		model.addAttribute("adminRole", role     != null ? role     : ROLE_ADMIN);
+	}
+
+	private String validateUsername(String username) {
+		if (username == null || username.trim().isBlank()) {
+			return "Username is required.";
+		}
+		if (!username.trim().matches("^[A-Za-z0-9._-]{3,50}$")) {
+			return "Username must be 3-50 characters and contain only letters, numbers, dots, hyphens, or underscores.";
+		}
+		return null;
+	}
+
+	private String validateEmail(String email, String tenant) {
+		if (email == null || email.trim().isBlank()) {
+			return "Email is required.";
+		}
+		if (!email.trim().matches("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,6}$")) {
+			return "Please provide a valid email address.";
+		}
+		if (tenant != null && !tenant.isBlank() && !email.trim().contains("." + tenant + "@")) {
+			return "Email must belong to your tenant domain (expected format: name." + tenant + TENANT_DOMAIN_SUFFIX;
+		}
+		return null;
+	}
+
+	private String validatePassword(String password, String confirmPassword) {
+		if (password == null || password.length() < 4) {
+			return "Password must be at least 4 characters long.";
+		}
+		if (!password.matches("^[A-Za-z0-9]+$")) {
+			return "Password must contain only letters and numbers (no special characters).";
+		}
+		if (!password.equals(confirmPassword)) {
+			return "Passwords do not match.";
+		}
+		return null;
 	}
 
 	/** Resolve the current admin's tenant segment from their email. */
 	private String getTenantSegment(String username) {
 		if (username == null) return "";
-		User user = userRepository.findByUsername(username);
+		var user = userRepository.findByUsername(username);
 		if (user == null || user.getEmail() == null) return "";
-		String email = user.getEmail();
+		var email = user.getEmail();
 		try {
-			String local = email.contains("@") ? email.substring(0, email.indexOf('@')) : email;
+			var local = email.contains("@") ? email.substring(0, email.indexOf('@')) : email;
 			int dot = local.lastIndexOf('.');
 			return dot >= 0 ? local.substring(dot + 1) : local;
 		} catch (Exception e) {
@@ -133,16 +193,16 @@ public class AdminController {
 	public String dashboard(HttpServletRequest request, Model model) {
 		injectUser(request, model);
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
-		List<User>    employees = userRepository.findEmployeesByTenant(tenant);
-		List<Project> projects  = projectRepository.findAll();
-		List<Task>    tasks     = tenant.isBlank() ? taskRepository.findAll() : taskRepository.findByTenantSegment(tenant);
+		var employees = userRepository.findEmployeesByTenant(tenant);
+		var projects  = projectRepository.findAll();
+		var tasks     = tenant.isBlank() ? taskRepository.findAll() : taskRepository.findByTenantSegment(tenant);
 
-		long activeProjects = projects.stream().filter(p -> "active".equalsIgnoreCase(p.getStatus())).count();
-		long tasksDone      = tasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
-		long pendingTasks   = tasks.stream().filter(t -> "pending".equalsIgnoreCase(t.getStatus())).count();
+		var activeProjects = projects.stream().filter(p -> STATUS_ACTIVE.equalsIgnoreCase(p.getStatus())).count();
+		var tasksDone      = tasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
+		var pendingTasks   = tasks.stream().filter(t -> STATUS_PENDING.equalsIgnoreCase(t.getStatus())).count();
 
 		model.addAttribute("totalEmployees",  employees.size());
 		model.addAttribute("employeeCount",   employees.size());
@@ -164,27 +224,27 @@ public class AdminController {
 	@GetMapping("/dashboard/analytics")
 	@ResponseBody
 	public Map<String, Object> dashboardAnalytics(HttpServletRequest request) {
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant = getTenantSegment(username);
 
-		List<User> users = tenant.isBlank()
+		var users = tenant.isBlank()
 				? userRepository.findAll()
 				: userRepository.findByTenantSegment(tenant);
-		List<User> employees = users.stream()
-				.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole()))
-				.filter(u -> !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-				.toList();
-		List<Task> tasks = tenant.isBlank()
+		var employees = users.stream()
+				.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole()))
+				.filter(u -> !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+				.collect(Collectors.toList());
+		var tasks = tenant.isBlank()
 				? taskRepository.findAll()
 				: taskRepository.findByTenantSegment(tenant);
 
-		Map<String, Object> data = buildDashboardAnalytics(tasks, employees);
-		data.put("totalEmployees", employees.size());
+		var data = buildDashboardAnalytics(tasks, employees);
+		data.put(TOTAL_EMPLOYEES, employees.size());
 		data.put("activeProjects", projectRepository.findAll().stream()
-				.filter(p -> "active".equalsIgnoreCase(p.getStatus()))
+				.filter(p -> STATUS_ACTIVE.equalsIgnoreCase(p.getStatus()))
 				.count());
-		data.put("tasksDone", data.get("statusDone"));
-		data.put("pendingTaskTotal", data.get("statusPending"));
+		data.put("tasksDone", data.get(STATUS_DONE));
+		data.put("pendingTaskTotal", data.get(STATUS_PENDING_LOWER));
 		return data;
 	}
 
@@ -193,33 +253,33 @@ public class AdminController {
 		List<Task> scopedTasks = tasks != null ? tasks : Collections.emptyList();
 		List<User> scopedEmployees = employees != null ? employees : Collections.emptyList();
 
-		long statusDone = scopedTasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
-		long statusInProgress = scopedTasks.stream().filter(t -> "in-progress".equalsIgnoreCase(t.getStatus())).count();
-		long statusPending = scopedTasks.stream().filter(t -> "pending".equalsIgnoreCase(t.getStatus())).count();
-		long statusReview = scopedTasks.stream().filter(t -> "waiting-for-review".equalsIgnoreCase(t.getStatus())).count();
-		long priorityHigh = scopedTasks.stream().filter(t -> "High".equalsIgnoreCase(t.getPriority())).count();
-		long priorityMedium = scopedTasks.stream().filter(t -> "Medium".equalsIgnoreCase(t.getPriority())).count();
-		long priorityLow = scopedTasks.stream().filter(t -> "Low".equalsIgnoreCase(t.getPriority())).count();
+		var statusDone = scopedTasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
+		var statusInProgress = scopedTasks.stream().filter(t -> "in-progress".equalsIgnoreCase(t.getStatus())).count();
+		var statusPending = scopedTasks.stream().filter(t -> STATUS_PENDING.equalsIgnoreCase(t.getStatus())).count();
+		var statusReview = scopedTasks.stream().filter(t -> "waiting-for-review".equalsIgnoreCase(t.getStatus())).count();
+		var priorityHigh = scopedTasks.stream().filter(t -> "High".equalsIgnoreCase(t.getPriority())).count();
+		var priorityMedium = scopedTasks.stream().filter(t -> "Medium".equalsIgnoreCase(t.getPriority())).count();
+		var priorityLow = scopedTasks.stream().filter(t -> "Low".equalsIgnoreCase(t.getPriority())).count();
 
-		List<String> memberLabels = new ArrayList<>();
-		List<Long> memberTaskCounts = new ArrayList<>();
-		for (User employee : scopedEmployees) {
-			if ("HR".equalsIgnoreCase(employee.getRole()) || "MANAGER".equalsIgnoreCase(employee.getRole())) {
+		var memberLabels = new ArrayList<String>();
+		var memberTaskCounts = new ArrayList<Long>();
+		for (var employee : scopedEmployees) {
+			if (ROLE_HR.equalsIgnoreCase(employee.getRole()) || ROLE_MANAGER.equalsIgnoreCase(employee.getRole())) {
 				continue;
 			}
-			long count = scopedTasks.stream()
+			var count = scopedTasks.stream()
 					.filter(t -> employee.getUsername() != null && employee.getUsername().equalsIgnoreCase(t.getAssignedTo()))
 					.count();
 			memberLabels.add(employee.getUsername());
 			memberTaskCounts.add(count);
 		}
 
-		long activeCount = scopedEmployees.stream().filter(User::isActive).count();
-		long inactiveCount = scopedEmployees.size() - activeCount;
-		long verified = scopedTasks.stream().filter(t -> "approved".equalsIgnoreCase(t.getVerificationStatus())).count();
-		long rejected = scopedTasks.stream().filter(t -> "rejected".equalsIgnoreCase(t.getVerificationStatus())).count();
-		long waiting = scopedTasks.stream().filter(t -> "waiting-for-review".equalsIgnoreCase(t.getVerificationStatus())).count();
-		long unverified = scopedTasks.size() - verified - rejected - waiting;
+		var activeCount = scopedEmployees.stream().filter(User::isActive).count();
+		var inactiveCount = scopedEmployees.size() - activeCount;
+		var verified = scopedTasks.stream().filter(t -> "approved".equalsIgnoreCase(t.getVerificationStatus())).count();
+		var rejected = scopedTasks.stream().filter(t -> STATUS_REJECTED.equalsIgnoreCase(t.getVerificationStatus())).count();
+		var waiting = scopedTasks.stream().filter(t -> "waiting-for-review".equalsIgnoreCase(t.getVerificationStatus())).count();
+		var unverified = scopedTasks.size() - verified - rejected - waiting;
 
 		data.put("statusDone", statusDone);
 		data.put("statusInProgress", statusInProgress);
@@ -233,7 +293,7 @@ public class AdminController {
 		data.put("activeTeam", activeCount);
 		data.put("inactiveTeam", inactiveCount);
 		data.put("verified", verified);
-		data.put("rejected", rejected);
+		data.put(STATUS_REJECTED, rejected);
 		data.put("waiting", waiting);
 		data.put("unverified", Math.max(unverified, 0));
 		data.put("totalMyTasks", scopedTasks.size());
@@ -253,7 +313,7 @@ public class AdminController {
 		model.addAttribute("chartActiveTeam", data.get("activeTeam"));
 		model.addAttribute("chartInactiveTeam", data.get("inactiveTeam"));
 		model.addAttribute("chartVerified", data.get("verified"));
-		model.addAttribute("chartRejected", data.get("rejected"));
+		model.addAttribute("chartRejected", data.get(STATUS_REJECTED));
 		model.addAttribute("chartWaiting", data.get("waiting"));
 		model.addAttribute("chartUnverified", data.get("unverified"));
 		model.addAttribute("chartTotalMyTasks", data.get("totalMyTasks"));
@@ -267,20 +327,20 @@ public class AdminController {
 	public String employeesPage(HttpServletRequest request, Model model) {
 		injectUser(request, model);
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
-		List<User> users = userRepository.findByTenantSegment(tenant).stream()
-				.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole())
-						  && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-				.toList();
+		var users = userRepository.findByTenantSegment(tenant).stream()
+				.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
+						  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+				.collect(Collectors.toList());
 
-		long active   = users.stream().filter(User::isActive).count();
-		long inactive = users.size() - active;
+		var active   = users.stream().filter(User::isActive).count();
+		var inactive = users.size() - active;
 
 		model.addAttribute("managers",          users);
 		model.addAttribute("totalManagers",     users.size());
-		model.addAttribute("totalEmployees",    users.size());
+		model.addAttribute(TOTAL_EMPLOYEES,    users.size());
 		model.addAttribute("activeEmployees",   active);
 		model.addAttribute("inactiveEmployees", inactive);
 		return "add-users";
@@ -294,14 +354,14 @@ public class AdminController {
 	@ResponseBody
 	public Map<String, Object> employeeDetail(@PathVariable Long id, HttpServletRequest request) {
 		attendanceService.processAutoPunchOuts();
-		Map<String, Object> resp = new LinkedHashMap<>();
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var resp = new LinkedHashMap<String, Object>();
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
-		User user = userRepository.findById(id).orElse(null);
-		if (user == null || (!"EMPLOYEE".equalsIgnoreCase(user.getRole())
-				&& !"MANAGER".equalsIgnoreCase(user.getRole())
-				&& !"HR".equalsIgnoreCase(user.getRole()))) {
+		var user = userRepository.findById(id).orElse(null);
+		if (user == null || (!ROLE_EMPLOYEE.equalsIgnoreCase(user.getRole())
+				&& !ROLE_MANAGER.equalsIgnoreCase(user.getRole())
+				&& !ROLE_HR.equalsIgnoreCase(user.getRole()))) {
 			resp.put("error", "User not found.");
 			return resp;
 		}
@@ -314,26 +374,26 @@ public class AdminController {
 		resp.put("status",   user.getStatus());
 
 		// Last 30 days attendance
-		LocalDate today = LocalDate.now();
-		LocalDate from  = today.minusDays(29);
-		Map<LocalDate, String> holidays = fetchHolidays(tenant, from, today);
-		List<Attendance> records = attendanceRepository.findByUserAndDateBetweenOrderByDateDesc(user, from, today);
-		List<AttendanceDay> days = buildDayList(records, from, today, holidays);
+		var today = LocalDate.now();
+		var from  = today.minusDays(29);
+		var holidays = fetchHolidays(tenant, from, today);
+		var records = attendanceRepository.findByUserAndDateBetweenOrderByDateDesc(user, from, today);
+		var days = buildDayList(records, from, today, holidays);
 
 		// Stats
-		long present  = days.stream().filter(d -> "present".equals(d.getStatus()) || "late".equals(d.getStatus())).count();
-		long absent   = days.stream().filter(d -> "absent".equals(d.getStatus())).count();
-		long halfDay  = days.stream().filter(d -> "half-day".equals(d.getStatus())).count();
-		long holiday  = days.stream().filter(d -> "holiday".equals(d.getStatus())).count();
+		var present  = days.stream().filter(d -> "present".equals(d.getStatus()) || "late".equals(d.getStatus())).count();
+		var absent   = days.stream().filter(d -> "absent".equals(d.getStatus())).count();
+		var halfDay  = days.stream().filter(d -> "half-day".equals(d.getStatus())).count();
+		var holiday  = days.stream().filter(d -> "holiday".equals(d.getStatus())).count();
 		resp.put("presentDays", present);
 		resp.put("absentDays",  absent);
 		resp.put("halfDays",    halfDay);
 		resp.put("holidays",    holiday);
 
 		// Attendance rows (last 30 days, newest first)
-		List<Map<String, String>> rows = new ArrayList<>();
-		for (AttendanceDay d : days) {
-			Map<String, String> row = new LinkedHashMap<>();
+		var rows = new ArrayList<Map<String, String>>();
+		for (var d : days) {
+			var row = new LinkedHashMap<String, String>();
 			row.put("date",      d.getDate().toString());
 			row.put("checkIn",   d.getCheckInDisplay());
 			row.put("checkOut",  d.getCheckOutDisplay());
@@ -350,17 +410,17 @@ public class AdminController {
 	private List<AttendanceDay> buildDayList(List<Attendance> records,
 											  LocalDate from, LocalDate to,
 											  Map<LocalDate, String> holidays) {
-		Map<LocalDate, Attendance> byDate = new LinkedHashMap<>();
-		for (Attendance a : records) byDate.put(a.getDate(), a);
+		var byDate = new LinkedHashMap<LocalDate, Attendance>();
+		for (var a : records) byDate.put(a.getDate(), a);
 
-		List<AttendanceDay> days = new ArrayList<>();
-		LocalDate today  = LocalDate.now();
-		LocalDate cursor = to;
+		var days = new ArrayList<AttendanceDay>();
+		var today  = LocalDate.now();
+		var cursor = to;
 		while (!cursor.isBefore(from)) {
 			if (holidays.containsKey(cursor)) {
 				days.add(new AttendanceDay(cursor, holidays.get(cursor), true));
 			} else {
-				DayOfWeek dow = cursor.getDayOfWeek();
+				var dow = cursor.getDayOfWeek();
 				if (dow == DayOfWeek.SATURDAY || dow == DayOfWeek.SUNDAY) {
 					days.add(new AttendanceDay(cursor, "weekend"));
 				} else if (byDate.containsKey(cursor)) {
@@ -390,11 +450,11 @@ public class AdminController {
 	@GetMapping("/add-employee")
 	public String addEmployeePage(HttpServletRequest request, Model model) {
 		injectUser(request, model);
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		String tenant = getTenantSegment(adminUser);
+		var tenant = getTenantSegment(adminUser);
 		model.addAttribute("domainCategories", domainCategoryRepository.findByTenantSegment(tenant));
 		return "admin-add-employee";
 	}
@@ -419,77 +479,63 @@ public class AdminController {
 	                      HttpServletRequest request,
 	                      RedirectAttributes ra) {
 
-		if (username == null || username.trim().isBlank()) {
-			ra.addFlashAttribute("errorMessage", "Username is required.");
-			return "redirect:/admin/add-employee";
-		}
-		if (!username.trim().matches("^[A-Za-z0-9._-]{3,50}$")) {
-			ra.addFlashAttribute("errorMessage", "Username must be 3-50 characters and contain only letters, numbers, dots, hyphens, or underscores.");
-			return "redirect:/admin/add-employee";
-		}
-		if (email == null || email.trim().isBlank()) {
-			ra.addFlashAttribute("errorMessage", "Email is required.");
-			return "redirect:/admin/add-employee";
-		}
-		if (!email.trim().matches("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,6}$")) {
-			ra.addFlashAttribute("errorMessage", "Please provide a valid email address.");
-			return "redirect:/admin/add-employee";
-		}
-		if (password == null || password.length() < 4) {
-			ra.addFlashAttribute("errorMessage", "Password must be at least 4 characters long.");
-			return "redirect:/admin/add-employee";
-		}
-		if (!password.matches("^[A-Za-z0-9]+$")) {
-			ra.addFlashAttribute("errorMessage", "Password must contain only letters and numbers (no special characters).");
-			return "redirect:/admin/add-employee";
-		}
-		if (!password.equals(confirmPassword)) {
-			ra.addFlashAttribute("errorMessage", "Passwords do not match.");
-			return "redirect:/admin/add-employee";
-		}
-		if (role == null || role.trim().isBlank() || (!"HR".equalsIgnoreCase(role) && !"MANAGER".equalsIgnoreCase(role) && !"EMPLOYEE".equalsIgnoreCase(role))) {
-			ra.addFlashAttribute("errorMessage", "Please select a valid role (HR, Manager, or Employee).");
-			return "redirect:/admin/add-employee";
-		}
-
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		User currentAdmin = userRepository.findByUsername(adminUser);
-		String tenant = getTenantSegment(adminUser);
-		if (tenant != null && !tenant.isBlank() && !email.trim().contains("." + tenant + "@")) {
-			ra.addFlashAttribute("errorMessage", "Email must belong to your tenant domain (expected format: name." + tenant + "@crm.com).");
-			return "redirect:/admin/add-employee";
+		var tenant = getTenantSegment(adminUser);
+
+		var usernameError = validateUsername(username);
+		if (usernameError != null) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, usernameError);
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
+		var emailError = validateEmail(email, tenant);
+		if (emailError != null) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, emailError);
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
+		}
+
+		var passwordError = validatePassword(password, confirmPassword);
+		if (passwordError != null) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, passwordError);
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
+		}
+
+		if (role == null || role.trim().isBlank() || (!ROLE_HR.equalsIgnoreCase(role) && !ROLE_MANAGER.equalsIgnoreCase(role) && !ROLE_EMPLOYEE.equalsIgnoreCase(role))) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Please select a valid role (HR, Manager, or Employee).");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
+		}
+
+		var currentAdmin = userRepository.findByUsername(adminUser);
 		if (currentAdmin != null) {
-			long employeeCount = userRepository.findByTenantSegment(tenant).stream()
-					.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole()) && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
+			var employeeCount = userRepository.findByTenantSegment(tenant).stream()
+					.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole()) && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
 					.count();
 			int limit = currentAdmin.getEmployeeLimit() != null ? currentAdmin.getEmployeeLimit() : 10;
 			if (employeeCount >= limit) {
-				ra.addFlashAttribute("errorMessage", "Employee limit reached (" + limit + "). You cannot add more employees.");
-				return "redirect:/admin/add-employee";
+				ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Employee limit reached (" + limit + "). You cannot add more employees.");
+				return REDIRECT_ADMIN_ADD_EMPLOYEE;
 			}
 		}
 
 		if (userRepository.findByEmail(email.trim()) != null) {
-			ra.addFlashAttribute("errorMessage", "Email already in use.");
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Email already in use.");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
 		if (userRepository.findByUsername(username.trim()) != null) {
-			ra.addFlashAttribute("errorMessage", "Username already in use.");
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Username already in use.");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
-		User user = new User();
+		var user = new User();
 		user.setEmail(email.trim());
 		user.setUsername(username.trim());
 		user.setPassword(passwordEncoder.encode(password));
 		user.setRole(role.toUpperCase());
-		user.setStatus("active");
+		user.setStatus(STATUS_ACTIVE);
 
 		if (domain != null && !domain.trim().isEmpty()) {
 			user.setDomain(domain.trim());
@@ -508,8 +554,8 @@ public class AdminController {
 
 		notificationService.notifyEmployeeManagementChanged(tenant, "added", username.trim());
 
-		ra.addFlashAttribute("successMessage", "Employee added successfully.");
-		return "redirect:/admin/employees";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Employee added successfully.");
+		return REDIRECT_ADMIN_EMPLOYEES;
 	}
 
 	// =========================================================
@@ -526,120 +572,126 @@ public class AdminController {
 	                         RedirectAttributes ra) {
 
 		if (file == null || file.isEmpty()) {
-			ra.addFlashAttribute("errorMessage", "Please select an Excel file to upload.");
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Please select an Excel file to upload.");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
-		String originalFilename = file.getOriginalFilename();
+		var originalFilename = file.getOriginalFilename();
 		if (originalFilename == null ||
 				(!originalFilename.endsWith(".xlsx") && !originalFilename.endsWith(".xls"))) {
-			ra.addFlashAttribute("errorMessage", "Only .xlsx or .xls files are supported.");
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Only .xlsx or .xls files are supported.");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String segment  = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var segment  = getTenantSegment(username);
 
-		List<String> errors = new ArrayList<>();
-		List<User>   toSave = new ArrayList<>();
+		var errors = new ArrayList<String>();
+		var toSave = new ArrayList<User>();
 
-		try (InputStream is = file.getInputStream();
-		     Workbook workbook = new XSSFWorkbook(is)) {
+		try (var is = file.getInputStream();
+		     var workbook = new XSSFWorkbook(is)) {
 
-			Sheet sheet = workbook.getSheetAt(0);
+			var sheet = workbook.getSheetAt(0);
 			if (sheet.getLastRowNum() < 1) {
-				ra.addFlashAttribute("errorMessage", "The file has no data rows.");
-				return "redirect:/admin/add-employee";
+				ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "The file has no data rows.");
+				return REDIRECT_ADMIN_ADD_EMPLOYEE;
 			}
 
 			for (int rowIndex = 1; rowIndex <= sheet.getLastRowNum(); rowIndex++) {
-				Row row = sheet.getRow(rowIndex);
-				if (row == null) continue;
-
-				String uname = getAdminCellString(row, 0);
-				String email  = getAdminCellString(row, 1);
-				String pwd    = getAdminCellString(row, 2);
-				String role   = getAdminCellString(row, 3);
-
-				// Skip fully blank rows
-				if (uname.isBlank() && email.isBlank() && pwd.isBlank() && role.isBlank()) continue;
-
-				String rowLabel = "Row " + (rowIndex + 1);
-
-				if (uname.isBlank()) { errors.add(rowLabel + ": username is empty."); continue; }
-				if (email.isBlank())  { errors.add(rowLabel + " (" + uname + "): email is empty."); continue; }
-				if (pwd.isBlank())    { errors.add(rowLabel + " (" + uname + "): password is empty."); continue; }
-				if (role.isBlank())   { errors.add(rowLabel + " (" + uname + "): role is empty."); continue; }
-
-				if ("ADMIN".equalsIgnoreCase(role) || "SUPER_ADMIN".equalsIgnoreCase(role)) {
-					errors.add(rowLabel + " (" + uname + "): role '" + role + "' is not allowed.");
-					continue;
+				var row = sheet.getRow(rowIndex);
+				if (row != null) {
+					processUploadRow(row, rowIndex, segment, errors, toSave);
 				}
-				if (segment != null && !segment.isBlank() && !email.contains("." + segment + "@")) {
-					errors.add(rowLabel + " (" + uname + "): email '" + email
-							+ "' does not belong to tenant domain (expected: name." + segment + "@crm.com).");
-					continue;
-				}
-				if (userRepository.existsByUsernameOrEmail(uname, email)) {
-					errors.add(rowLabel + " (" + uname + "): username or email already exists in the system.");
-					continue;
-				}
-				boolean dupInFile = toSave.stream().anyMatch(u ->
-						u.getUsername().equalsIgnoreCase(uname) || u.getEmail().equalsIgnoreCase(email));
-				if (dupInFile) {
-					errors.add(rowLabel + " (" + uname + "): username or email is duplicated within this file.");
-					continue;
-				}
-
-				User user = new User();
-				user.setUsername(uname);
-				user.setEmail(email);
-				user.setPassword(passwordEncoder.encode(pwd));
-				user.setRole(role.toUpperCase());
-				user.setStatus("active");
-				toSave.add(user);
 			}
 
 		} catch (Exception e) {
-			ra.addFlashAttribute("errorMessage", "Failed to parse file: " + e.getMessage());
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Failed to parse file: " + e.getMessage());
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
 		// Any errors → reject all
 		if (!errors.isEmpty()) {
 			ra.addFlashAttribute("bulkErrors", errors);
-			ra.addFlashAttribute("errorMessage",
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE,
 					"Upload rejected — " + errors.size() + " error(s) found. No employees were saved.");
-			return "redirect:/admin/add-employee";
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
 		if (toSave.isEmpty()) {
-			ra.addFlashAttribute("errorMessage", "No valid data rows found in the file.");
-			return "redirect:/admin/add-employee";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "No valid data rows found in the file.");
+			return REDIRECT_ADMIN_ADD_EMPLOYEE;
 		}
 
 		// Enforce employee limit for bulk upload
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		User currentAdmin = userRepository.findByUsername(adminUser);
+		var currentAdmin = userRepository.findByUsername(adminUser);
 		if (currentAdmin != null) {
-			String tenant = getTenantSegment(adminUser);
-			long existingCount = userRepository.findByTenantSegment(tenant).stream()
-					.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole()) && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
+			var tenant = getTenantSegment(adminUser);
+			var existingCount = userRepository.findByTenantSegment(tenant).stream()
+					.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole()) && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
 					.count();
 			int limit = currentAdmin.getEmployeeLimit() != null ? currentAdmin.getEmployeeLimit() : 10;
 			if (existingCount + toSave.size() > limit) {
-				ra.addFlashAttribute("errorMessage", "Upload rejected. Adding " + toSave.size()
+				ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Upload rejected. Adding " + toSave.size()
 						+ " employee(s) would exceed your limit of " + limit + " (current count: " + existingCount + ").");
-				return "redirect:/admin/add-employee";
+				return REDIRECT_ADMIN_ADD_EMPLOYEE;
 			}
 		}
 
 		userRepository.saveAll(toSave);
 		notificationService.notifyEmployeeManagementChanged(segment, "uploaded", "multiple");
-		ra.addFlashAttribute("successMessage", toSave.size() + " employee(s) imported successfully.");
-		return "redirect:/admin/employees";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, toSave.size() + " employee(s) imported successfully.");
+		return REDIRECT_ADMIN_EMPLOYEES;
+	}
+
+	private void processUploadRow(Row row, int rowIndex, String segment, List<String> errors, List<User> toSave) {
+		var uname = getAdminCellString(row, 0);
+		var email = getAdminCellString(row, 1);
+		var pwd   = getAdminCellString(row, 2);
+		var role  = getAdminCellString(row, 3);
+
+		// Skip fully blank rows
+		if (uname.isBlank() && email.isBlank() && pwd.isBlank() && role.isBlank()) {
+			return;
+		}
+
+		var rowLabel = "Row " + (rowIndex + 1);
+
+		if (uname.isBlank()) { errors.add(rowLabel + ": username is empty."); return; }
+		if (email.isBlank()) { errors.add(rowLabel + " (" + uname + "): email is empty."); return; }
+		if (pwd.isBlank())   { errors.add(rowLabel + " (" + uname + "): password is empty."); return; }
+		if (role.isBlank())  { errors.add(rowLabel + " (" + uname + "): role is empty."); return; }
+
+		if (ROLE_ADMIN.equalsIgnoreCase(role) || ROLE_SUPER_ADMIN.equalsIgnoreCase(role)) {
+			errors.add(rowLabel + " (" + uname + "): role '" + role + "' is not allowed.");
+			return;
+		}
+		if (segment != null && !segment.isBlank() && !email.contains("." + segment + "@")) {
+			errors.add(rowLabel + " (" + uname + "): email '" + email
+					+ "' does not belong to tenant domain (expected: name." + segment + TENANT_DOMAIN_SUFFIX);
+			return;
+		}
+		if (userRepository.existsByUsernameOrEmail(uname, email)) {
+			errors.add(rowLabel + " (" + uname + "): username or email already exists in the system.");
+			return;
+		}
+		var dupInFile = toSave.stream().anyMatch(u ->
+				u.getUsername().equalsIgnoreCase(uname) || u.getEmail().equalsIgnoreCase(email));
+		if (dupInFile) {
+			errors.add(rowLabel + " (" + uname + "): username or email is duplicated within this file.");
+			return;
+		}
+
+		var user = new User();
+		user.setUsername(uname);
+		user.setEmail(email);
+		user.setPassword(passwordEncoder.encode(pwd));
+		user.setRole(role.toUpperCase());
+		user.setStatus(STATUS_ACTIVE);
+		toSave.add(user);
 	}
 
 	/** Safely read a cell value as a trimmed String. */
@@ -658,21 +710,21 @@ public class AdminController {
 
 	@PostMapping("/toggle-user/{id}")
 	public String toggleUser(@PathVariable Long id, RedirectAttributes ra) {
-		User user = userRepository.findById(id).orElse(null);
+		var user = userRepository.findById(id).orElse(null);
 		if (user != null
-				&& !"ADMIN".equalsIgnoreCase(user.getRole())
-				&& !"SUPER_ADMIN".equalsIgnoreCase(user.getRole())) {
-			String newStatus = "active".equalsIgnoreCase(user.getStatus()) ? "inactive" : "active";
+				&& !ROLE_ADMIN.equalsIgnoreCase(user.getRole())
+				&& !ROLE_SUPER_ADMIN.equalsIgnoreCase(user.getRole())) {
+			var newStatus = STATUS_ACTIVE.equalsIgnoreCase(user.getStatus()) ? "inactive" : STATUS_ACTIVE;
 			user.setStatus(newStatus);
 			userRepository.save(user);
 
-			String adminName = SecurityContextHolder.getContext().getAuthentication().getName();
-			String tenant = getTenantSegment(adminName);
+			var adminName = SecurityContextHolder.getContext().getAuthentication().getName();
+			var tenant = getTenantSegment(adminName);
 			notificationService.notifyEmployeeManagementChanged(tenant, "updated", user.getUsername());
 
-			ra.addFlashAttribute("successMessage", user.getUsername() + " is now " + newStatus + ".");
+			ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, user.getUsername() + " is now " + newStatus + ".");
 		}
-		return "redirect:/admin/employees";
+		return REDIRECT_ADMIN_EMPLOYEES;
 	}
 
 	// =========================================================
@@ -681,23 +733,23 @@ public class AdminController {
 
 	@PostMapping("/delete-employee/{id}")
 	public String deleteEmployee(@PathVariable Long id, RedirectAttributes ra) {
-		User user = userRepository.findById(id).orElse(null);
+		var user = userRepository.findById(id).orElse(null);
 		if (user != null
-				&& !"ADMIN".equalsIgnoreCase(user.getRole())
-				&& !"SUPER_ADMIN".equalsIgnoreCase(user.getRole())) {
-			String name = user.getUsername();
+				&& !ROLE_ADMIN.equalsIgnoreCase(user.getRole())
+				&& !ROLE_SUPER_ADMIN.equalsIgnoreCase(user.getRole())) {
+			var name = user.getUsername();
 			
-			String adminName = SecurityContextHolder.getContext().getAuthentication().getName();
-			String tenant = getTenantSegment(adminName);
+			var adminName = SecurityContextHolder.getContext().getAuthentication().getName();
+			var tenant = getTenantSegment(adminName);
 			notificationService.deleteAllForUser(user.getId());
 			
 			userRepository.delete(user);
 			
 			notificationService.notifyEmployeeManagementChanged(tenant, "deleted", name);
 
-			ra.addFlashAttribute("successMessage", "Employee '" + name + "' deleted.");
+			ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Employee '" + name + "' deleted.");
 		}
-		return "redirect:/admin/employees";
+		return REDIRECT_ADMIN_EMPLOYEES;
 	}
 
 	// =========================================================
@@ -708,15 +760,15 @@ public class AdminController {
 	public String editEmployeePage(@PathVariable Long id, HttpServletRequest request, Model model,
 	                               RedirectAttributes ra) {
 		injectUser(request, model);
-		User emp = userRepository.findById(id).orElse(null);
+		var emp = userRepository.findById(id).orElse(null);
 		if (emp == null
-				|| "ADMIN".equalsIgnoreCase(emp.getRole())
-				|| "SUPER_ADMIN".equalsIgnoreCase(emp.getRole())) {
-			ra.addFlashAttribute("errorMessage", "User not found or cannot be edited.");
-			return "redirect:/admin/employees";
+				|| ROLE_ADMIN.equalsIgnoreCase(emp.getRole())
+				|| ROLE_SUPER_ADMIN.equalsIgnoreCase(emp.getRole())) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "User not found or cannot be edited.");
+			return REDIRECT_ADMIN_EMPLOYEES;
 		}
-		String adminName = SecurityContextHolder.getContext().getAuthentication().getName();
-		String tenant = getTenantSegment(adminName);
+		var adminName = SecurityContextHolder.getContext().getAuthentication().getName();
+		var tenant = getTenantSegment(adminName);
 		model.addAttribute("domainCategories", domainCategoryRepository.findByTenantSegment(tenant));
 		model.addAttribute("employee", emp);
 		return "edit-employee";
@@ -733,69 +785,54 @@ public class AdminController {
 	                             @RequestParam(required = false) String joiningDate,
 	                             HttpServletRequest request,
 	                             RedirectAttributes ra) {
-		User emp = userRepository.findById(id).orElse(null);
+		var emp = userRepository.findById(id).orElse(null);
 		if (emp == null
-				|| "ADMIN".equalsIgnoreCase(emp.getRole())
-				|| "SUPER_ADMIN".equalsIgnoreCase(emp.getRole())) {
-			ra.addFlashAttribute("errorMessage", "User not found or cannot be edited.");
-			return "redirect:/admin/employees";
+				|| ROLE_ADMIN.equalsIgnoreCase(emp.getRole())
+				|| ROLE_SUPER_ADMIN.equalsIgnoreCase(emp.getRole())) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "User not found or cannot be edited.");
+			return REDIRECT_ADMIN_EMPLOYEES;
 		}
 
-		if (username == null || username.trim().isBlank()) {
-			ra.addFlashAttribute("errorMessage", "Username is required.");
-			return "redirect:/admin/edit-employee/" + id;
-		}
-		if (!username.trim().matches("^[A-Za-z0-9._-]{3,50}$")) {
-			ra.addFlashAttribute("errorMessage", "Username must be 3-50 characters and contain only letters, numbers, dots, hyphens, or underscores.");
-			return "redirect:/admin/edit-employee/" + id;
-		}
-		if (email == null || email.trim().isBlank()) {
-			ra.addFlashAttribute("errorMessage", "Email is required.");
-			return "redirect:/admin/edit-employee/" + id;
-		}
-		if (!email.trim().matches("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,6}$")) {
-			ra.addFlashAttribute("errorMessage", "Please provide a valid email address.");
-			return "redirect:/admin/edit-employee/" + id;
-		}
-		if (role == null || role.trim().isBlank() || ("ADMIN".equalsIgnoreCase(role) || "SUPER_ADMIN".equalsIgnoreCase(role))) {
-			ra.addFlashAttribute("errorMessage", "You cannot assign that role.");
-			return "redirect:/admin/edit-employee/" + id;
+		var adminName = SecurityContextHolder.getContext().getAuthentication().getName();
+		var tenant = getTenantSegment(adminName);
+
+		var usernameError = validateUsername(username);
+		if (usernameError != null) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, usernameError);
+			return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
 		}
 
-		String adminName = SecurityContextHolder.getContext().getAuthentication().getName();
-		String tenant = getTenantSegment(adminName);
-		if (tenant != null && !tenant.isBlank() && !email.trim().contains("." + tenant + "@")) {
-			ra.addFlashAttribute("errorMessage", "Email must belong to your tenant domain (expected format: name." + tenant + "@crm.com).");
-			return "redirect:/admin/edit-employee/" + id;
+		var emailError = validateEmail(email, tenant);
+		if (emailError != null) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, emailError);
+			return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
+		}
+
+		if (role == null || role.trim().isBlank() || (ROLE_ADMIN.equalsIgnoreCase(role) || ROLE_SUPER_ADMIN.equalsIgnoreCase(role))) {
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "You cannot assign that role.");
+			return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
 		}
 
 		// Check uniqueness
-		User existingUserByUname = userRepository.findByUsername(username.trim());
+		var existingUserByUname = userRepository.findByUsername(username.trim());
 		if (existingUserByUname != null && !existingUserByUname.getId().equals(emp.getId())) {
-			ra.addFlashAttribute("errorMessage", "Username is already taken.");
-			return "redirect:/admin/edit-employee/" + id;
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Username is already taken.");
+			return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
 		}
-		User existingUserByEmail = userRepository.findByEmail(email.trim());
+		var existingUserByEmail = userRepository.findByEmail(email.trim());
 		if (existingUserByEmail != null && !existingUserByEmail.getId().equals(emp.getId())) {
-			ra.addFlashAttribute("errorMessage", "Email is already taken.");
-			return "redirect:/admin/edit-employee/" + id;
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Email is already taken.");
+			return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
 		}
 
 		emp.setUsername(username.trim());
 		emp.setEmail(email.trim());
 
 		if (password != null && !password.isBlank()) {
-			if (password.length() < 4) {
-				ra.addFlashAttribute("errorMessage", "Password must be at least 4 characters long.");
-				return "redirect:/admin/edit-employee/" + id;
-			}
-			if (!password.matches("^[A-Za-z0-9]+$")) {
-				ra.addFlashAttribute("errorMessage", "Password must contain only letters and numbers (no special characters).");
-				return "redirect:/admin/edit-employee/" + id;
-			}
-			if (!password.equals(confirmPassword)) {
-				ra.addFlashAttribute("errorMessage", "Passwords do not match.");
-				return "redirect:/admin/edit-employee/" + id;
+			var passwordError = validatePassword(password, confirmPassword);
+			if (passwordError != null) {
+				ra.addFlashAttribute(ATTR_ERROR_MESSAGE, passwordError);
+				return REDIRECT_ADMIN_EDIT_EMPLOYEE + id;
 			}
 			emp.setPassword(passwordEncoder.encode(password));
 		}
@@ -814,8 +851,8 @@ public class AdminController {
 
 		notificationService.notifyEmployeeManagementChanged(tenant, "updated", emp.getUsername());
 
-		ra.addFlashAttribute("successMessage", "'" + emp.getUsername() + "' updated successfully.");
-		return "redirect:/admin/employees";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "'" + emp.getUsername() + "' updated successfully.");
+		return REDIRECT_ADMIN_EMPLOYEES;
 	}
 
 
@@ -828,18 +865,18 @@ public class AdminController {
 	public String tasksPage(HttpServletRequest request, Model model) {
 		injectUser(request, model);
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
-		List<Task> tasks = tenant.isBlank()
+		var tasks = tenant.isBlank()
 				? taskRepository.findAll()
 				: taskRepository.findByTenantSegment(tenant);
 		tasks.sort(java.util.Comparator.comparing(Task::getId).reversed());
 
-		long done    = tasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
-		long pending = tasks.stream().filter(t -> "pending".equalsIgnoreCase(t.getStatus())).count();
+		var done    = tasks.stream().filter(t -> "done".equalsIgnoreCase(t.getStatus())).count();
+		var pending = tasks.stream().filter(t -> STATUS_PENDING.equalsIgnoreCase(t.getStatus())).count();
 
-		List<Team> teams = tenant.isBlank()
+		var teams = tenant.isBlank()
 				? teamRepository.findAll()
 				: teamRepository.findByTenantSegmentOrderByIdDesc(tenant);
 
@@ -897,11 +934,11 @@ public class AdminController {
 	}
 
 	@GetMapping("/reports/view/{attachmentId}")
-	public org.springframework.http.ResponseEntity<?> viewReportAttachment(
+	public org.springframework.http.ResponseEntity<byte[]> viewReportAttachment(
 			@PathVariable Long attachmentId) {
-		ReportAttachment att = reportAttachmentRepository.findById(attachmentId).orElse(null);
+		var att = reportAttachmentRepository.findById(attachmentId).orElse(null);
 		if (att == null) return org.springframework.http.ResponseEntity.notFound().build();
-		String ct = att.getContentType() != null ? att.getContentType() : "application/octet-stream";
+		var ct = att.getContentType() != null ? att.getContentType() : "application/octet-stream";
 		return org.springframework.http.ResponseEntity.ok()
 				.header(org.springframework.http.HttpHeaders.CONTENT_DISPOSITION,
 						"inline; filename=\"" + att.getOriginalFilename() + "\"")
@@ -910,11 +947,11 @@ public class AdminController {
 	}
 
 	@GetMapping("/reports/download/{attachmentId}")
-	public org.springframework.http.ResponseEntity<?> downloadReportAttachment(
+	public org.springframework.http.ResponseEntity<byte[]> downloadReportAttachment(
 			@PathVariable Long attachmentId) {
-		ReportAttachment att = reportAttachmentRepository.findById(attachmentId).orElse(null);
+		var att = reportAttachmentRepository.findById(attachmentId).orElse(null);
 		if (att == null) return org.springframework.http.ResponseEntity.notFound().build();
-		String ct = att.getContentType() != null ? att.getContentType() : "application/octet-stream";
+		var ct = att.getContentType() != null ? att.getContentType() : "application/octet-stream";
 		return org.springframework.http.ResponseEntity.ok()
 				.header(org.springframework.http.HttpHeaders.CONTENT_DISPOSITION,
 						"attachment; filename=\"" + att.getOriginalFilename() + "\"")
@@ -978,22 +1015,22 @@ public class AdminController {
 	 * Excludes today's meetings that have already ended.
 	 */
 	private List<Meeting> getUpcomingMeetingsForUser(String tenant, String username) {
-		List<Meeting> all = meetingRepository
+		var all = meetingRepository
 				.findUpcomingMeetingsForUserOrHost(tenant, username, LocalDate.now());
-		LocalDate today = LocalDate.now();
-		LocalTime now   = LocalTime.now();
+		var today = LocalDate.now();
+		var now   = LocalTime.now();
 		return all.stream().filter(m -> {
 			if (!m.getMeetingDate().equals(today)) return true;
 			if (m.getMeetingTime() == null) return true;
 			int dur = (m.getDuration() != null) ? m.getDuration() : 0;
 			return !m.getMeetingTime().plusMinutes(dur).isBefore(now);
-		}).toList();
+		}).collect(Collectors.toList());
 	}
 
 	private List<Meeting> getPastMeetingsForUser(String tenant, String username) {
-		List<Meeting> all = meetingRepository.findAllMeetingsForUserOrHost(tenant, username);
-		LocalDate today = LocalDate.now();
-		LocalTime now   = LocalTime.now();
+		var all = meetingRepository.findAllMeetingsForUserOrHost(tenant, username);
+		var today = LocalDate.now();
+		var now   = LocalTime.now();
 		return all.stream().filter(m -> {
 			if (m.getMeetingDate() == null) return false;
 			if (m.getMeetingDate().isAfter(today)) return false;
@@ -1001,25 +1038,25 @@ public class AdminController {
 			if (m.getMeetingTime() == null) return false;
 			int dur = (m.getDuration() != null) ? m.getDuration() : 0;
 			return m.getMeetingTime().plusMinutes(dur).isBefore(now);
-		}).toList();
+		}).collect(Collectors.toList());
 	}
 
 	@GetMapping("/schedule-meeting")
 	public String scheduleMeetingPage(HttpServletRequest request, Model model) {
 		injectUser(request, model);
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
 		model.addAttribute("meetingForm", new Meeting());
-		model.addAttribute("upcomingMeetings", getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
-		model.addAttribute("pastMeetings", getPastMeetingsForUser(tenant, username != null ? username : ""));
-		model.addAttribute("tenantUsers",
+		model.addAttribute(ATTR_UPCOMING_MEETINGS, getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
+		model.addAttribute(ATTR_PAST_MEETINGS, getPastMeetingsForUser(tenant, username != null ? username : ""));
+		model.addAttribute(ATTR_TENANT_USERS,
 				userRepository.findByTenantSegment(tenant).stream()
-						.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole())
-								  && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-						.toList());
-		model.addAttribute("activePage", "schedule-meeting");
-		return "admin-scheduleMeeting";
+						.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
+								  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+						.collect(Collectors.toList()));
+		model.addAttribute(ATTR_ACTIVE_PAGE, PAGE_SCHEDULE_MEETING);
+		return TEMPLATE_SCHEDULE_MEETING;
 	}
 
 	// =========================================================
@@ -1033,8 +1070,8 @@ public class AdminController {
 	                              Model model,
 	                              RedirectAttributes ra) {
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
 		if ("in-person".equalsIgnoreCase(meetingForm.getMeetingType()) && (meetingForm.getLocation() == null || meetingForm.getLocation().isBlank())) {
 			result.rejectValue("location", "NotBlank", "Location is required for in-person meetings.");
@@ -1042,24 +1079,24 @@ public class AdminController {
 
 		if (result.hasErrors()) {
 			injectUser(request, model);
-			model.addAttribute("upcomingMeetings", getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
-			model.addAttribute("pastMeetings", getPastMeetingsForUser(tenant, username != null ? username : ""));
-			model.addAttribute("tenantUsers",
+			model.addAttribute(ATTR_UPCOMING_MEETINGS, getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
+			model.addAttribute(ATTR_PAST_MEETINGS, getPastMeetingsForUser(tenant, username != null ? username : ""));
+			model.addAttribute(ATTR_TENANT_USERS,
 					userRepository.findByTenantSegment(tenant).stream()
-							.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole())
-									  && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-							.toList());
-			model.addAttribute("errorMessage", "Please fix the errors below.");
-			model.addAttribute("activePage", "schedule-meeting");
-			return "admin-scheduleMeeting";
+							.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
+									  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+							.collect(Collectors.toList()));
+			model.addAttribute(ATTR_ERROR_MESSAGE, "Please fix the errors below.");
+			model.addAttribute(ATTR_ACTIVE_PAGE, PAGE_SCHEDULE_MEETING);
+			return TEMPLATE_SCHEDULE_MEETING;
 		}
 
 		meetingForm.setTenantSegment(tenant);
 		meetingForm.setScheduledBy(username != null ? username : "");
 		meetingRepository.save(meetingForm);
 		notificationService.notifyMeetingParticipants(meetingForm);
-		ra.addFlashAttribute("successMessage", "Meeting scheduled successfully.");
-		return "redirect:/admin/schedule-meeting";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Meeting scheduled successfully.");
+		return REDIRECT_ADMIN_SCHEDULE_MEETING;
 	}
 
 	// =========================================================
@@ -1073,25 +1110,25 @@ public class AdminController {
 	                              RedirectAttributes ra) {
 
 		injectUser(request, model);
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
-		Meeting meeting = meetingRepository.findById(id).orElse(null);
+		var meeting = meetingRepository.findById(id).orElse(null);
 		if (meeting == null) {
-			ra.addFlashAttribute("errorMessage", "Meeting not found.");
-			return "redirect:/admin/schedule-meeting";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, MSG_MEETING_NOT_FOUND);
+			return REDIRECT_ADMIN_SCHEDULE_MEETING;
 		}
 
 		model.addAttribute("meetingForm", meeting);
-		model.addAttribute("upcomingMeetings", getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
-		model.addAttribute("pastMeetings", getPastMeetingsForUser(tenant, username != null ? username : ""));
-		model.addAttribute("tenantUsers",
+		model.addAttribute(ATTR_UPCOMING_MEETINGS, getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
+		model.addAttribute(ATTR_PAST_MEETINGS, getPastMeetingsForUser(tenant, username != null ? username : ""));
+		model.addAttribute(ATTR_TENANT_USERS,
 				userRepository.findByTenantSegment(tenant).stream()
-						.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole())
-								  && !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-						.toList());
-		model.addAttribute("activePage", "schedule-meeting");
-		return "admin-scheduleMeeting";
+						.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
+								  && !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+						.collect(Collectors.toList()));
+		model.addAttribute(ATTR_ACTIVE_PAGE, PAGE_SCHEDULE_MEETING);
+		return TEMPLATE_SCHEDULE_MEETING;
 	}
 
 	// =========================================================
@@ -1106,8 +1143,8 @@ public class AdminController {
 	                            Model model,
 	                            RedirectAttributes ra) {
 
-		String username = (String) request.getAttribute("loggedInUser");
-		String tenant   = getTenantSegment(username);
+		var username = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
+		var tenant   = getTenantSegment(username);
 
 		if ("in-person".equalsIgnoreCase(meetingForm.getMeetingType()) && (meetingForm.getLocation() == null || meetingForm.getLocation().isBlank())) {
 			result.rejectValue("location", "NotBlank", "Location is required for in-person meetings.");
@@ -1115,19 +1152,21 @@ public class AdminController {
 
 		if (result.hasErrors()) {
 			injectUser(request, model);
-			model.addAttribute("upcomingMeetings", getUpcomingMeetingsForUser(tenant, username != null ? username : ""));			model.addAttribute("pastMeetings", getPastMeetingsForUser(tenant, username != null ? username : ""));			model.addAttribute("tenantUsers",
+			model.addAttribute(ATTR_UPCOMING_MEETINGS, getUpcomingMeetingsForUser(tenant, username != null ? username : ""));
+			model.addAttribute(ATTR_PAST_MEETINGS, getPastMeetingsForUser(tenant, username != null ? username : ""));
+			model.addAttribute(ATTR_TENANT_USERS,
 					userRepository.findByTenantSegment(tenant).stream()
-						.filter(u -> !"ADMIN".equalsIgnoreCase(u.getRole())
-							&& !"SUPER_ADMIN".equalsIgnoreCase(u.getRole()))
-						.toList());
-			model.addAttribute("activePage", "schedule-meeting");
-			return "admin-scheduleMeeting";
+						.filter(u -> !ROLE_ADMIN.equalsIgnoreCase(u.getRole())
+							&& !ROLE_SUPER_ADMIN.equalsIgnoreCase(u.getRole()))
+						.collect(Collectors.toList()));
+			model.addAttribute(ATTR_ACTIVE_PAGE, PAGE_SCHEDULE_MEETING);
+			return TEMPLATE_SCHEDULE_MEETING;
 		}
 
-		Meeting existing = meetingRepository.findById(id).orElse(null);
+		var existing = meetingRepository.findById(id).orElse(null);
 		if (existing == null) {
-			ra.addFlashAttribute("errorMessage", "Meeting not found.");
-			return "redirect:/admin/schedule-meeting";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, MSG_MEETING_NOT_FOUND);
+			return REDIRECT_ADMIN_SCHEDULE_MEETING;
 		}
 
 		existing.setTitle(meetingForm.getTitle());
@@ -1142,8 +1181,8 @@ public class AdminController {
 		meetingRepository.save(existing);
 		notificationService.notifyMeetingParticipants(existing);
 
-		ra.addFlashAttribute("successMessage", "Meeting updated successfully.");
-		return "redirect:/admin/schedule-meeting";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Meeting updated successfully.");
+		return REDIRECT_ADMIN_SCHEDULE_MEETING;
 	}
 
 	// =========================================================
@@ -1165,11 +1204,11 @@ public class AdminController {
 	@GetMapping("/settings")
 	public String settingsPage(HttpServletRequest request, Model model) {
 		injectUser(request, model);
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		String tenant = getTenantSegment(adminUser);
+		var tenant = getTenantSegment(adminUser);
 		model.addAttribute("categories", domainCategoryRepository.findByTenantSegment(tenant));
 		model.addAttribute("activePage", "settings");
 		return "admin-settings";
@@ -1177,42 +1216,42 @@ public class AdminController {
 
 	@PostMapping("/settings/domain-categories")
 	public String addDomainCategory(@RequestParam String name, HttpServletRequest request, RedirectAttributes ra) {
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		String tenant = getTenantSegment(adminUser);
+		var tenant = getTenantSegment(adminUser);
 		if (name == null || name.trim().isEmpty()) {
-			ra.addFlashAttribute("errorMessage", "Domain category name is required.");
-			return "redirect:/admin/settings";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Domain category name is required.");
+			return REDIRECT_ADMIN_SETTINGS;
 		}
-		String cleanName = name.trim();
+		var cleanName = name.trim();
 		if (domainCategoryRepository.existsByNameAndTenantSegment(cleanName, tenant)) {
-			ra.addFlashAttribute("errorMessage", "Domain category already exists.");
-			return "redirect:/admin/settings";
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Domain category already exists.");
+			return REDIRECT_ADMIN_SETTINGS;
 		}
-		com.crm.demo.model.DomainCategory cat = new com.crm.demo.model.DomainCategory();
+		var cat = new com.crm.demo.model.DomainCategory();
 		cat.setName(cleanName);
 		cat.setTenantSegment(tenant);
 		domainCategoryRepository.save(cat);
-		ra.addFlashAttribute("successMessage", "Domain category '" + cleanName + "' added successfully.");
-		return "redirect:/admin/settings";
+		ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Domain category '" + cleanName + "' added successfully.");
+		return REDIRECT_ADMIN_SETTINGS;
 	}
 
 	@PostMapping("/settings/domain-categories/delete/{id}")
 	public String deleteDomainCategory(@PathVariable Long id, HttpServletRequest request, RedirectAttributes ra) {
-		String adminUser = (String) request.getAttribute("loggedInUser");
+		var adminUser = (String) request.getAttribute(ATTR_LOGGED_IN_USER);
 		if (adminUser == null) {
 			adminUser = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getName();
 		}
-		String tenant = getTenantSegment(adminUser);
-		java.util.Optional<com.crm.demo.model.DomainCategory> catOpt = domainCategoryRepository.findById(id);
+		var tenant = getTenantSegment(adminUser);
+		var catOpt = domainCategoryRepository.findById(id);
 		if (catOpt.isPresent() && tenant.equals(catOpt.get().getTenantSegment())) {
 			domainCategoryRepository.delete(catOpt.get());
-			ra.addFlashAttribute("successMessage", "Domain category deleted successfully.");
+			ra.addFlashAttribute(ATTR_SUCCESS_MESSAGE, "Domain category deleted successfully.");
 		} else {
-			ra.addFlashAttribute("errorMessage", "Domain category not found.");
+			ra.addFlashAttribute(ATTR_ERROR_MESSAGE, "Domain category not found.");
 		}
-		return "redirect:/admin/settings";
+		return REDIRECT_ADMIN_SETTINGS;
 	}
 }
